[tool.poetry]
name = "AIAgentsLangGraph"
version = "0.1.0"
description = ""
authors = ["Jerome Mohanan <2962518+jero2rome@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.0.65"
langchain-community = "^0.2.4"
langchain-anthropic = "^0.1.15"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
